refactor: Implements better error handling and update Swagger
