# api/adapters/out/type-orm/postgres-adapter/models/data-validation/category-dto-validation.ts
@@ -1,0 +1,20 @@
+import { IsDate, IsNotEmpty, IsOptional, IsString } from "class-validator";
+
+export class ValidateCategory {
+  @IsOptional()
+  @IsString()
+  id?: string;
+
+  @IsNotEmpty()
+  @IsString()
+  name: string;
+
+  @IsNotEmpty()
+  @IsString()
+  description: string;
+
+  @IsOptional()
+  @IsDate()
+  created_at?: Date;
+
+}
